# http-auth

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
design/: 20211020-new-crate.md  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_challenges.rs
fuzz/src/: lib.rs
src/: basic.rs  digest.rs  lib.rs  parser.rs  table.rs
