[package]
name = "http-auth"
version = "0.1.10"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "HTTP authentication: parse challenge lists, respond to Basic and Digest challenges. Likely to be extended with server support and additional auth schemes."
keywords = ["http", "authentication", "digest", "basic"]
edition = "2018"
resolver = "2"
categories = [
    "authentication",
    "parser-implementations",
    "web-programming::http-client",
]
repository = "https://github.com/scottlamb/http-auth"
rust-version = "1.70.0"

[features]
default = ["basic-scheme", "digest-scheme"]

# Enable code to respond to challenges of the given scheme.
basic-scheme = ["base64"]
digest-scheme = ["digest", "hex", "md-5", "rand", "sha2"]

# Enable per-byte trace! calls in parsing (causing code bloat). This is only
# meant for testing http-auth itself.
trace = ["log"]

[package.metadata.docs.rs]
# https://docs.rs/about/metadata
# To generate docs locally, run: RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.22.0", optional = true }
digest = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
http = { version = "0.2.5", optional = true }
http10 = { package = "http", version = "1.0.0", optional = true }
log = {version = "0.4", optional = true }
md-5 = { version = "0.10", optional = true }
memchr = "2.4.1"
rand = { version = "0.8.4", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
pretty_assertions = "1.0.0"
reqwest = { version = "0.12.7", features = ["blocking"] }

[[example]]
name = "reqwest"
required-features = ["http"]
